infra/k8s/auth-db-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: auth-db
          image: mongo
