infra/k8s/auth-db-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-db-srv
spec:
  type: ClusterIP
  selector:
    app: auth-db
  ports:
    - name: auth-db
      protocol: TCP
      port: 27017
      targetPort: 27017
